# sqlxfluff

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.md  pyproject.toml
.github/workflows/: publish.yml
sqlxfluff/: config_utils.py  constants.py  linting.py  main.py  parsing.py
sqlxfluff/formatters/: base.py  indent.py  javascript.py  sqlx.py
