[tool.poetry]
name = "sqlxfluff"
version = "0.1.0"
description = ""
authors = ["Coby Simmons <cobysimmons01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsbeautifier = "^1.14.9"
sqlfluff = "^2.3.2"
termcolor = "^2.3.0"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring"

[tool.poetry.scripts]
sqlxfluff = 'sqlxfluff.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
