[tool.poetry]
name = "sqlxfluff"
version = "0.2.0"
description = ""
authors = ["Coby Simmons <cobysimmons01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlfluff = "^2.3.2"
termcolor = "^2.3.0"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "import-error",
    "invalid-name",
    "missing-module-docstring",
]

[tool.poetry.scripts]
sqlxfluff = 'sqlxfluff.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
